--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
    <body>
 
+        <!-- ! Animation -->
         <div class="bubbles">
             <span class="one"></span>
             <span class="two"></span>
@@ -20,9 +21,47 @@
             <span class="seven"></span>
         </div>
         
+        <!-- ! main section  -->
         <section id="main" class="main">
-            <div class="display-container"></div>
-            <div class="button-container"></div>
+
+
+            <form action="#">
+
+                <!-- ! display of calculator -->
+                <div class="display-container">
+                    <input type="text" name="answer" id="answer" value="">
+                </div>
+                
+                <!-- ! buttons of calculator -->
+                <div class="button-container">
+                    <input type="button" id="AC" value="AC">
+                    <input type="button" id="DEL" value="DEL">
+                    <input type="button" id="per" value="%">
+                    <input type="button" id="div" value="/">
+                    <!-- <br> -->
+                    <input type="button" id="b7" value="7">
+                    <input type="button" id="b8" value="8">
+                    <input type="button" id="b9" value="9">
+                    <input type="button" id="mul" value="*">
+                    <!-- <br> -->
+                    <input type="button" id="b4" value="4">
+                    <input type="button" id="b5" value="5">
+                    <input type="button" id="b6" value="6">
+                    <input type="button" id="sub" value="-">
+                    <!-- <br> -->
+                    <input type="button" id="b1" value="1">
+                    <input type="button" id="b2" value="2">
+                    <input type="button" id="b3" value="3">
+                    <input type="button" id="add" value="+">
+                    <!-- <br> -->
+                    <input type="button" id="b0" value="0">
+                    <input type="button" id="b00" value="00">
+                    <input type="button" id="dot" value=".">
+                    <input type="button" id="eql" value="=">
+                    <br>
+                </div>
+            </form>
+
         </section>
 
     <script src="./script.js" ></script>
