--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
                 <!-- ! display of calculator -->
                 <div class="display-container">
-                    <input type="text" name="answer" id="answer" value="">
+                    <input type="text" title="viral" name="answer" id="answer" value="">
                 </div>
                 
                 <!-- ! buttons of calculator -->
